--- a/.jshintrc
+++ b/.jshintrc
@@ -19,7 +19,9 @@
   "trailing": true, // Prohibit trailing whitespaces.
   "smarttabs": false, // Suppresses warnings about mixed tabs and spaces
   "globals": { // Globals variables.
-    "angular": true
+    "angular": true,
+    "spa": true,
+    "$", true
   },
   "predef": [ // Extra globals.
     "define",
