--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
         "angular-bootstrap": "~0.6.0",
         "angular-ui-utils": "0.0.4",
         "json3": "~3.2.4",
-        "jquery": "~1.10.2"
+        "jquery": "~1.10.2",
+        "jquery-maskedinputs": "~1.3.1"
     },
     "exportsOverride": {
     	"bootstrap": {
