--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,8 @@
     "dependencies": {
         "bootstrap": "2.3.2",
         "json3": "~3.2.4",
-        "jquery-maskedinputs": "~1.3.1"
+        "jquery-maskedinputs": "~1.3.1",
+        "html5shiv": "~3.7.0"
     },
     "exportsOverride": {
     	"bootstrap": {
