--- a/bower.json
+++ b/bower.json
@@ -1,17 +1,22 @@
 {
-    "name": "mean",
-    "version": "1.0.0",
-    "dependencies": {
-        "bootstrap": "2.3.2",
-        "json3": "~3.2.4",
-        "jquery-maskedinputs": "~1.3.1",
-        "html5shiv": "~3.7.0"
+  "name": "mean",
+  "version": "1.0.0",
+  "dependencies": {
+    "bootstrap": "~3.0.2",
+    "jquery-maskedinputs": "~1.3.1",
+    "html5shiv": "~3.7.0"
+  },
+  "exportsOverride": {                                                                                                                                                                                                                     
+    "bootstrap": {
+      "css": "dist/css/bootstrap.min.css",
+      "js": "dist/js/bootstrap.min.js",
+      "fonts": "dist/fonts/*.*"
     },
-    "exportsOverride": {
-    	"bootstrap": {
-    		"css": "docs/assets/css/bootstrap*.css",
-    		"js": "docs/assets/js/bootstrap.js",
-    		"img": "docs/assets/img/glyphicons-halflings*.png"
-    	}
+    "jquery-maskedinputs": {
+      "js": "dist/jquery.maskedinput.min.js"
+    },
+    "html5shiv": {
+      "js": "dist/html5shiv.js"
     }
+  }
 }
