--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "bootstrap": "~3.0.2",
     "jquery-maskedinputs": "~1.3.1",
-    "html5shiv": "~3.7.0"
+    "html5shiv": "~3.7.0",
+    "jquery-maskmoney": "~2.1.2"
   },
   "exportsOverride": {                                                                                                                                                                                                                     
     "bootstrap": {
@@ -17,6 +18,9 @@
     },
     "html5shiv": {
       "js": "dist/html5shiv.js"
+    },
+    "jquery-maskmoney": {
+      "js": "jquery.maskMoney.js"
     }
   }
 }
