adding grunt-uglify

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "grunt-nodemon": "latest",
     "grunt-concurrent": "latest",
     "grunt-mocha-test": "latest",
-    "grunt-contrib-concat": "latest"
+    "grunt-contrib-concat": "latest",
+    "grunt-contrib-uglify": "latest"
   }
 }
