--- a/bower.json
+++ b/bower.json
@@ -5,8 +5,8 @@
     "bootstrap": "~3.0.2",
     "html5shiv": "~3.7.0",
     "jquery": "~1.10.2",
-    "angular": "~1.2.3",
-    "angular-route": "~1.2.3",
+    "angular": "~1.2.4",
+    "angular-route": "~1.2.4",
     "angular-ui-date": "~0.0.3",
     "jquery-ui": "~1.10.3"
   },
@@ -27,7 +27,7 @@
       "themes": "themes"
     },
     "angular": {
-      "js": "angular.min.js*",
+      "js": ["angular.min.js*","angular.js"],
       "css": "angular-csp.css"
     },
     "angular-route": {
